--- a/AwesomeScreencast/AndroidManifest.xml
+++ b/AwesomeScreencast/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:hardwareAccelerated="true">
         <service
             android:name="eu.codlab.screencast.AwesomeScreencastService" />
         <activity
