adding record widget

--- a/AwesomeScreencast/AndroidManifest.xml
+++ b/AwesomeScreencast/AndroidManifest.xml
@@ -28,6 +28,15 @@
             android:name="eu.codlab.screencast.AwesomeScreencastActivityStop"
             android:label="@string/app_name" >
         </activity>
+        
+        <receiver android:name=".RecordWidgetProvider"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+			</intent-filter>
+			<meta-data android:name="android.appwidget.provider"
+				android:resource="@xml/widget_record_provider" />
+		</receiver>
     </application>
 
 </manifest>
